# qtraylib

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh.md  main.cc
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  qraylibrenderer.cpp  qraylibrenderer.h  qtraylib.h
